trunk/Archive2/cc/9944277e65cf2a/output
main.cpp:17:18: error: invalid application of 'sizeof' to a function type
    std::cout << sizeof(gg());
                 ^     ~~~~~~
1 error generated.
