trunk/Archive2/cc/9944277e65cf2a/main.cpp
#include <iostream>
#include <string>
#include <vector>

class gg{
public:
    gg(int x ){

    }
    int a;
    int b;
    int c; 
};

int main()
{
    std::cout << sizeof(gg());
}
